--- a/index.html
+++ b/index.html
@@ -3,20 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>换乘助手</title>
+    <script src="index.js"></script>
 </head>
-<body align="center">
-    欢迎使用换乘助手
-    <form action="advise" method="POST" align="center">
-        出发站: <input type="radio" checked="checked" name="From_station" value="广州南"> 广州南
-                <input type="radio" checked="checked" name="From_station" value="端州"> 端州
-                <input type="radio" checked="checked" name="From_station" value="肇庆"> 肇庆 <br>
-        到达站: <input type="radio" checked="checked" name="To_station" value="肇庆"> 肇庆
-                <input type="radio" checked="checked" name="To_station" value="端州"> 端州
-                <input type="radio" checked="checked" name="To_station" value="广州南"> 广州南<br>
-        日期:   <input type="date" name="Date"> <br>
-        不早于此时间出发的车次: <input type="text" name="nearly"> <br>
-        不晚于此时间到达的车次: <input type="text" name="nlate"> <br>
-        <input type="submit" value="提交">
-    </form>
+<body>
+    <div align="center">
+        欢迎使用换乘助手
+        <form action="advise" method="POST" align="center">
+            出发站: <input type="radio" checked="checked" name="From_station" value="广州南"> 广州南
+                    <input type="radio" checked="checked" name="From_station" value="端州"> 端州
+                    <input type="radio" checked="checked" name="From_station" value="肇庆"> 肇庆 <br>
+            到达站: <input type="radio" checked="checked" name="To_station" value="肇庆"> 肇庆
+                    <input type="radio" checked="checked" name="To_station" value="端州"> 端州
+                    <input type="radio" checked="checked" name="To_station" value="广州南"> 广州南<br>
+            日期:   <input type="date" name="Date"> <br>
+            不早于此时间出发的车次: <input type="text" name="nearly"> <br>
+            不晚于此时间到达的车次: <input type="text" name="nlate"> <br>
+            <input type="submit" value="提交">
+        </form>
+    </div>
+    <div style="position:fixed; bottom:0px;text-align:center;width: 100%;">
+        <a aria-label="Homepage" title="GitHub" class="footer-octicon mr-lg-4" href="https://github.com/Coldog2333/transfer-requests">
+          <svg height="24" class="octicon octicon-mark-github" viewBox="0 0 16 16" version="1.1" width="24" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path></svg>
+        </a>
+    </div>
 </body>
 </html>
